Add working navigation structure

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "react-native": "^0.11.4",
+    "react-native-button": "^1.2.1",
     "react-redux": "^3.0.1",
     "redux": "^3.0.2",
     "redux-devtools": "^2.1.5"
