--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react-native": "^0.11.4",
     "react-native-button": "^1.2.1",
+    "react-native-tabbar": "^0.1.1",
     "react-redux": "^3.0.1",
     "redux": "^3.0.2",
     "redux-devtools": "^2.1.5"
