--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@
 node_modules/
 platforms/
 plugins/
+
+
+### Intellij ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
+
+*.iml
+
+## Directory-based project format:
+.idea/
+
