--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "ionic-contrib-tinder-cards": "*",
-    "restangular": "~1.5.1"
+    "restangular": "~1.5.1",
+    "openfb": "~0.5.0"
   }
 }
