--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "ionic-contrib-tinder-cards": "*",
     "restangular": "~1.5.1",
-    "openfb": "~0.5.0"
+    "openfb": "~0.5.0",
+    "angular-cookies": "~1.4.7"
   }
 }
